--- a/index.html
+++ b/index.html
@@ -2,14 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/favicon2.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ponderosa Hacks</title>
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Ponderosa Hacks" />
-    <link rel="apple-touch-icon" href="/favicon2.png" />
     <link rel="manifest" href="/manifest.json" />
-    <link rel="stylesheet" href="resources.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <BODY BGCOLOR="FFFFFF">
 
@@ -30,9 +28,9 @@
             <H2>😇 Hackathon Code of Conduct 
               <a href="https://hackclub.com/conduct/" target="_blank" style="text-decoration:none">(Webpage)</a></H2>
             <H2>🚦 Workshop #1: How to get started on a hackathon project<BR> </H2> 
-            <H3> <a href="https://docs.google.com/presentation/d/1xCqAfsGLvYqiiRfMxAjCvP6fUzKf8fI6RreFGdBNMkc/edit?usp=sharing" target="_blank" style="text-decoration:none">🔸Slides</a></H3>   
+            <H3> <a href="https://docs.google.com/presentation/d/1YRdSccN6l6dvZtjuTohT5IU4AcZMskYhulU7lYdMkDE/edit?usp=sharing" target="_blank" style="text-decoration:none">🔸Slides</a></H3>   
             <H2>🧋 Workshop #2: Website Building<BR> </H2>
-              <H3> <a href="https://docs.google.com/presentation/d/1YRdSccN6l6dvZtjuTohT5IU4AcZMskYhulU7lYdMkDE/edit?usp=sharing" target="_blank" style="text-decoration:none">🔸Slides</a> </H3>
+              <H3> <a href="https://docs.google.com/presentation/d/1xCqAfsGLvYqiiRfMxAjCvP6fUzKf8fI6RreFGdBNMkc/edit?usp=sharing" target="_blank" style="text-decoration:none">🔸Slides</a> </H3>
                 <H3> <a href="https://workshops.hackclub.com/personal_website/" target="_blank" style="text-decoration:none">🔸Hack Club Personal Website Workshop</a> </H3>
                 <H3> <a href="https://getemoji.com/" target="_blank" style="text-decoration:none">🔸Emoji Library</a></H3>
                 <H3> <a href="https://forms.hackclub.com/t/wqQMhgXydLus" target="_blank" style="text-decoration:none">🔸Boba Drops Form - Event Code: PonHack24</a></H3>
