--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </style>
       <div>
         <a href="http://ponderosa-hacks.com">
-            <img src="/public/images/hackslogo.png" href="http://ponderosa-hacks.com" target="_blank" alt="Ponderosa Hacks" class="center">
+            <img src="https://ponderosa-hacks.com/images/hackslogo.png" href="http://ponderosa-hacks.com" target="_blank" alt="Ponderosa Hacks" class="center">
         </a>
         <BR> 
         <HR>
@@ -37,8 +37,8 @@
               
             <H2>🚗 <B>Workshop #3:</B> Rover Mini-Challenges<BR> </H2>
               <H3> <a href="https://docs.google.com/presentation/d/1IRo4BSSKD_EG-WUgmakWG0oV_WQSXueVfaxe41FgGjU/edit?usp=sharing" target="_blank" style="text-decoration:none">🔸Slides</a></H3>
-              <H3> <a href="http://ponderosa-hacks.com" target="_blank" style="text-decoration:none">🔸Workshop Guide</a></H3>
-              <H3> <a href="/public/images/PonderosaHacks Rover Assembly Instructions.pdf" target="_blank" style="text-decoration:none">🔸Assembly Instructions</a></H3>
+              <H3> <a href="https://ponderosa-hacks.com/images/Ponderosa%20Planet%20Rover%20Guide.pdf" target="_blank" style="text-decoration:none">🔸Ponderosa Planet Rover Challenges</a></H3>
+              <H3> <a href="https://ponderosa-hacks.com/images/PonderosaHacks%20Rover%20Assembly%20Instructions.pdf" target="_blank" style="text-decoration:none">🔸Assembly Instructions</a></H3>
                <H3> <a href="https://www.acebott.com/pages/tutorial" target="_blank" style="text-decoration:none">🔸ACEBOTT Website</a></H3> 
            <H2>🏆 Judging Criteria</H2>
            <H3> <a href="http://ponderosa-hacks.com" target="_blank" style="text-decoration:none">🔸Scorecard</a></H3>
