--- a/index.html
+++ b/index.html
@@ -40,7 +40,12 @@
               <H3> <a href="https://ponderosa-hacks.com/images/Ponderosa%20Planet%20Rover%20Guide.pdf" target="_blank" style="text-decoration:none">🔸Ponderosa Planet Rover Challenges</a></H3>
               <H3> <a href="https://ponderosa-hacks.com/images/PonderosaHacks%20Rover%20Assembly%20Instructions.pdf" target="_blank" style="text-decoration:none">🔸Assembly Instructions</a></H3>
                <H3> <a href="https://www.acebott.com/pages/tutorial" target="_blank" style="text-decoration:none">🔸ACEBOTT Website</a></H3> 
-           <H2>🏆 Judging Criteria</H2>
+               <H3> <a href="https://ponderosa-hacks.com/images/Acebott.zip" target="_blank" style="text-decoration:none">🔸Library: Acebott.zip</a></H3>
+              <H3> <a href="https://ponderosa-hacks.com/images/ESP32Servo.zip" target="_blank" style="text-decoration:none">🔸ESP32Servo.zip</a></H3>
+              <H3> <a href="https://ponderosa-hacks.com/images/IRremote.zip" target="_blank" style="text-decoration:none">🔸IRremote.zip</a></H3>
+              <H3> <a href="https://ponderosa-hacks.com/images/Lesson%208.zip" target="_blank" style="text-decoration:none">🔸IRremote.zip</a></H3>
+
+        <H2>🏆 Judging Criteria</H2>
            <H3> <a href="http://ponderosa-hacks.com" target="_blank" style="text-decoration:none">🔸Scorecard</a></H3>
 
                   <BR> <HR>
