--- a/index.html
+++ b/index.html
@@ -41,13 +41,12 @@
               <H3> <a href="https://ponderosa-hacks.com/images/PonderosaHacks%20Rover%20Assembly%20Instructions.pdf" target="_blank" style="text-decoration:none">🔸Assembly Instructions</a></H3>
                <H3> <a href="https://www.acebott.com/pages/tutorial" target="_blank" style="text-decoration:none">🔸ACEBOTT Website</a></H3> 
                <H3> <a href="https://ponderosa-hacks.com/images/Acebott.zip" target="_blank" style="text-decoration:none">🔸Library: Acebott.zip</a></H3>
-              <H3> <a href="https://ponderosa-hacks.com/images/ESP32Servo.zip" target="_blank" style="text-decoration:none">🔸ESP32Servo.zip</a></H3>
-              <H3> <a href="https://ponderosa-hacks.com/images/IRremote.zip" target="_blank" style="text-decoration:none">🔸IRremote.zip</a></H3>
-              <H3> <a href="https://ponderosa-hacks.com/images/Lesson%208.zip" target="_blank" style="text-decoration:none">🔸IRremote.zip</a></H3>
+              <H3> <a href="https://ponderosa-hacks.com/images/ESP32Servo.zip" target="_blank" style="text-decoration:none">🔸Library: ESP32Servo.zip</a></H3>
+              <H3> <a href="https://ponderosa-hacks.com/images/IRremote.zip" target="_blank" style="text-decoration:none">🔸Library: IRremote.zip</a></H3>
+              <H3> <a href="https://ponderosa-hacks.com/images/Lesson%208.zip" target="_blank" style="text-decoration:none">🔸RemoteControlFiles.zip</a></H3>
 
         <H2>🏆 Judging Criteria</H2>
            <H3> <a href="http://ponderosa-hacks.com" target="_blank" style="text-decoration:none">🔸Scorecard</a></H3>
-
                   <BR> <HR>
       <H1>EXTRAS!</H1> 
       <H2>🤖 Action Figure Assembly
